# genbank_to

./: .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: request.md
GenBankToLib/: __init__.py  bacteria.py  genbank.py  genbank_to_json.py  gff.py  main.py  version.py
GenbankToLib/: genbank.py  main.py
docs/: README.md  api.rst  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  output_formats.rst  quickstart.rst  requirements.txt  usage.rst
test/: NC_001417.gbk  README.md  test_genbank_to.py  test_gff.py
test/outputs/: NC_001417.amr.fna  NC_001417.amr.gff  NC_001417.faa  NC_001417.functions  NC_001417.gff3  NC_001417.json  NC_001417.orfs  NC_001417.phage_finder  NC_001417.ptt
