[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genbank_to"
dynamic = ["version"]
description = "Convert GenBank format files to a swath of other formats"
readme = "README.md"
authors = [
    {name = "Rob Edwards", email = "raedwards@gmail.com"}
]
license = "MIT"
keywords = ["genbank", "bioinformatics", "microbiology", "genome", "genomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.74",
    "numpy>=1.16.0",
    "pandas",
    "bcbio-gff>=0.6.6",
]

[project.urls]
Homepage = "https://github.com/linsalrob/genbank_to"
Repository = "https://github.com/linsalrob/genbank_to"
Issues = "https://github.com/linsalrob/genbank_to/issues"

[project.scripts]
genbank_to = "GenBankToLib.main:run"

[tool.setuptools]
packages = ["GenBankToLib"]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
"*" = ["*.md", "LICENSE", "VERSION", "test/NC_001417.gbk"]
